--- a/sarahcoyne/angular.json
+++ b/sarahcoyne/angular.json
@@ -24,10 +24,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/nav.css"
             ],
             "scripts": []
           },
