--- a/sarahcoyne/angular.json
+++ b/sarahcoyne/angular.json
@@ -25,7 +25,8 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets"
+              "src/assets",
+              "src/favicon.png"
             ],
             "styles": [
               "src/styles.css",
